--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta http-equiv="refresh" content="0; url=REU_FSU_2024_1.pdf" />
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <p>If the download doesn't start automatically, <a href="REU_FSU_2024_1.pdf">click here</a>.</p>
 </body>
 </html>
