--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url=REU_FSU_2024_1.pdf" />
 </head>
 <body>
-    <p>If the download doesn't start automatically, <a href="REU_FSU_2024_(23).pdf">click here</a>.</p>
+    <p>If the download doesn't start automatically, <a href="REU_FSU_2024 (23).pdf">click here</a>.</p>
 </body>
 </html>
